Thu Aug 28 22:29:03 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	From Don Hinton <dhinton@dresystems.com>
	* tests/Bug_1576_Regression_Test.cpp:

	  Updated to work in wchar builds.

Thu Aug 28 07:57:33 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/Driver.pm:

          Added ERROR: to the output when an unknown option is passed on the
          command line.

Thu Aug 28 07:10:54 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:

          Added the reverseclean target as best as it could be supported by
          MPC.

Thu Aug 28 06:33:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ASNMP/tests/Address_Test.cpp:
          Fixed compile error

Thu Aug 28 04:24:24 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ACEXML/apps/svcconf/.depend.Makefile.ACEXML_XML_Svc_Conf_Parser:
        * ACEXML/common/.depend.Makefile.ACEXML:
        * ACEXML/examples/SAXPrint/.depend.Makefile.SAXPrint:
        * ACEXML/parser/parser/.depend.Makefile.ACEXML_Parser:
        * ACEXML/tests/.depend.Makefile.ContentHandler_Test:
        * ACEXML/tests/.depend.Makefile.HttpCharStream_Test:
        * ACEXML/tests/.depend.Makefile.NamespaceSupport_Test:
        * ACEXML/tests/.depend.Makefile.Transcoder_Test:
          Removed these files since they should be generated dynamically
          by the new MPC Makefiles (that will also be generated
          dynamically).

Wed Aug 27 20:34:19 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

        * Kokyu/Kokyu_defs.h: Added export qualification to
          Dispatcher_Attributes class to fix link error in
          Win2K_VC71_NET_DLL build.

Wed Aug 27 17:52:44 2003  George Edwards <g.edwards@vanderbilt.edu>

        * bin/tao_orb_tests.lst:

          Added the following new tests to daily builds:
          TAO/tests/OBV/Collocated/Forward/
          TAO/tests/Portable_Interceptors/Bug_1559/