@@ -1,3 +1,12 @@
+Fri Aug 29 08:27:58 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
+        
+	* Kokyu/Dispatcher_Task.cpp:
+	* Kokyu/Kokyu_defs.cpp:
+	* Kokyu/tests/DSRT_MIF/MIF.cpp: Added explicit template
+	  instantiations to fix compile errors in
+	  Solaris_9_Forte7_ACE_(MPC) build. Thanks to Don Hinton for
+	  pointing this out.
+
 Thu Aug 28 22:29:03 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	From Don Hinton <dhinton@dresystems.com>
